--- a/dcf_app.html
+++ b/dcf_app.html
@@ -304,10 +304,9 @@
     <!-- Футер -->
     <footer>
         <div class="footer-content">
-            <p>&copy; 2025. Разработано и реализовано: <strong><span>Смоленышев Олег Вячеславович. ИНН 771800842058. ОГРН 323774600351922</span></strong>. All Rights Reserved. Бета - версия (0.9.1) от 2025-01-23</p>
+            <p>&copy; 2025. Разработано и реализовано: <strong><span>Смоленышев Олег Вячеславович. ИНН 771800842058. ОГРН 323774600351922</span></strong>. All Rights Reserved. Бета - версия (0.9.1) от 2025-01-23 <a href="https://github.com/Smolenishev/dcf_app" target="_blank">GiHub</a></p>
             <p> <a href="https://otter-finance.ru" target="_blank">https://otter-finance.ru</a></p>
-            <p>email: <a href="mailto:smolenishev@otter-finance.ru">smolenishev@otter-finance.ru</a></p>
-            <p>+7 916 014 37 70</p>            
+            <p>email: <a href="mailto:smolenishev@otter-finance.ru">smolenishev@otter-finance.ru</a></p><span>+7 916 014 37 70</span>             
         </div>
     </footer>
 
